package Entity

type Call struct {
	Command string
}
