@startuml


namespace CommunicationMode {
    class CommunicationMode.Mode << (T, #FF7700) >>  {
    }
    interface UnknownError  {
        + Error() string

    }
    class unknownError << (S,Aquamarine) >> {
        + Error() string

    }
}

"CommunicationMode.UnknownError" <|-- "implements""CommunicationMode.unknownError"



namespace Entity {
    class Batch << (S,Aquamarine) >> {
        + Uuid uuid.UUID
        + TaskUuid uuid.UUID
        + Results []Result
        + CreatedAt time.Time
        + UpdatedAt time.Time

        + AddResult(result Result) 

    }
    class Call << (S,Aquamarine) >> {
        + Command string

    }
    class Result << (S,Aquamarine) >> {
        + ID uint
        + Uuid uuid.UUID
        + BatchUuid uuid.UUID
        + Content string
        + CreatedAt time.Time
        + UpdatedAt time.Time

    }
    class Step << (S,Aquamarine) >> {
        + Uuid uuid.UUID
        + TaskUuid uuid.UUID
        + Sentence string

    }
    class Task << (S,Aquamarine) >> {
        + Uuid uuid.UUID
        + Host string
        + Port string
        + Steps []Step
        + Mode ValueObject.Modes
        + Status ValueObject.TaskStatus
        + ExecutionMode ValueObject.ExecutionMode

    }
}


"Entity.Batch""uses" o-- "Entity.Result"
"Entity.Batch""uses" o-- "time.Time"
"Entity.Batch""uses" o-- "uuid.UUID"
"Entity.Result""uses" o-- "time.Time"
"Entity.Result""uses" o-- "uuid.UUID"
"Entity.Step""uses" o-- "uuid.UUID"
"Entity.Task""uses" o-- "Entity.Step"
"Entity.Task""uses" o-- "ValueObject.ExecutionMode"
"Entity.Task""uses" o-- "ValueObject.Modes"
"Entity.Task""uses" o-- "ValueObject.TaskStatus"
"Entity.Task""uses" o-- "uuid.UUID"

namespace ExecutionMode {
    class ExecutionMode.ExecutionMode << (T, #FF7700) >>  {
    }
    interface UnknownError  {
        + Error() string

    }
    class unknownError << (S,Aquamarine) >> {
        + Error() string

    }
}

"CommunicationMode.UnknownError" <|-- "implements""ExecutionMode.unknownError"
"ExecutionMode.UnknownError" <|-- "implements""ExecutionMode.unknownError"
"Host.InvalidHostError" <|-- "implements""ExecutionMode.unknownError"
"Port.InvalidPortError" <|-- "implements""ExecutionMode.unknownError"
"Status.UnknownError" <|-- "implements""ExecutionMode.unknownError"
"Step.InvalidSentenceLengthError" <|-- "implements""ExecutionMode.unknownError"


namespace Host {
    interface InvalidHostError  {
        + Error() string

    }
    interface Vo  {
        + GetValue() string

    }
    class invalidHostError << (S,Aquamarine) >> {
        + Error() string

    }
    class vo << (S,Aquamarine) >> {
        - value string

        + GetValue() string

    }
}

"CommunicationMode.UnknownError" <|-- "implements""Host.invalidHostError"
"ExecutionMode.UnknownError" <|-- "implements""Host.invalidHostError"
"Host.InvalidHostError" <|-- "implements""Host.invalidHostError"
"Port.InvalidPortError" <|-- "implements""Host.invalidHostError"
"Status.UnknownError" <|-- "implements""Host.invalidHostError"
"Step.InvalidSentenceLengthError" <|-- "implements""Host.invalidHostError"
"Host.Vo" <|-- "implements""Host.vo"
"Port.Vo" <|-- "implements""Host.vo"


namespace Port {
    interface InvalidPortError  {
        + Error() string

    }
    interface Vo  {
        + GetValue() string

    }
    class invalidPortError << (S,Aquamarine) >> {
        + Error() string

    }
    class vo << (S,Aquamarine) >> {
        - value string

        + GetValue() string

    }
}

"CommunicationMode.UnknownError" <|-- "implements""Port.invalidPortError"
"ExecutionMode.UnknownError" <|-- "implements""Port.invalidPortError"
"Host.InvalidHostError" <|-- "implements""Port.invalidPortError"
"Port.InvalidPortError" <|-- "implements""Port.invalidPortError"
"Status.UnknownError" <|-- "implements""Port.invalidPortError"
"Step.InvalidSentenceLengthError" <|-- "implements""Port.invalidPortError"
"Host.Vo" <|-- "implements""Port.vo"
"Port.Vo" <|-- "implements""Port.vo"


namespace Repository {
    interface Recorder  {
        + Persist(task Task.Task) 

    }
}



namespace Service {
    class Creator << (S,Aquamarine) >> {
        + Recorder Repository.Recorder

        + Create(host Host.Vo, port Port.Vo, stepVos []Step.Vo, communicationMode CommunicationMode.Mode, executionMode ExecutionMode.ExecutionMode) (Task.Task, error)

    }
}


"Service.Creator""uses" o-- "Repository.Recorder"

namespace Status {
    class Status.Status << (T, #FF7700) >>  {
    }
    interface UnknownError  {
        + Error() string

    }
    class unknownError << (S,Aquamarine) >> {
        + Error() string

    }
}

"CommunicationMode.UnknownError" <|-- "implements""Status.unknownError"
"ExecutionMode.UnknownError" <|-- "implements""Status.unknownError"
"Host.InvalidHostError" <|-- "implements""Status.unknownError"
"Port.InvalidPortError" <|-- "implements""Status.unknownError"
"Status.UnknownError" <|-- "implements""Status.unknownError"
"Step.InvalidSentenceLengthError" <|-- "implements""Status.unknownError"


namespace Step {
    interface InvalidSentenceLengthError  {
        + Error() string

    }
    interface Step  {
        + GetUuid() uuid.UUID
        + GetUuidString() string
        + GetSentence() string

    }
    interface Vo  {
        + GetSentence() string

    }
    class invalidSentenceLengthError << (S,Aquamarine) >> {
        + Error() string

    }
    class step << (S,Aquamarine) >> {
        - uuid uuid.UUID
        - sentence string

        + GetUuid() uuid.UUID
        + GetUuidString() string
        + GetSentence() string

    }
    class vo << (S,Aquamarine) >> {
        - sentence string

        + GetSentence() string

    }
}

"CommunicationMode.UnknownError" <|-- "implements""Step.invalidSentenceLengthError"
"ExecutionMode.UnknownError" <|-- "implements""Step.invalidSentenceLengthError"
"Host.InvalidHostError" <|-- "implements""Step.invalidSentenceLengthError"
"Port.InvalidPortError" <|-- "implements""Step.invalidSentenceLengthError"
"Status.UnknownError" <|-- "implements""Step.invalidSentenceLengthError"
"Step.InvalidSentenceLengthError" <|-- "implements""Step.invalidSentenceLengthError"
"Step.Step" <|-- "implements""Step.step"
"Step.Vo" <|-- "implements""Step.step"
"Step.Vo" <|-- "implements""Step.vo"

"Step.step""uses" o-- "uuid.UUID"

namespace Task {
    interface Task  {
        + GetUuid() uuid.UUID
        + GetUuidString() string
        + GetHost() Host.Vo
        + GetPort() Port.Vo
        + GetSteps() []Step.Step
        + GetCommunicationMode() CommunicationMode.Mode
        + GetExecutionMode() ExecutionMode.ExecutionMode
        + GetStatus() Status.Status

    }
    class task << (S,Aquamarine) >> {
        - uuid uuid.UUID
        - host Host.Vo
        - port Port.Vo
        - steps []Step.Step
        - communicationMode CommunicationMode.Mode
        - executionMode ExecutionMode.ExecutionMode
        - status Status.Status

        + GetUuid() uuid.UUID
        + GetUuidString() string
        + GetHost() Host.Vo
        + GetPort() Port.Vo
        + GetSteps() []Step.Step
        + GetCommunicationMode() CommunicationMode.Mode
        + GetExecutionMode() ExecutionMode.ExecutionMode
        + GetStatus() Status.Status

    }
}

"Task.Task" <|-- "implements""Task.task"

"Task.task""uses" o-- "CommunicationMode.Mode"
"Task.task""uses" o-- "ExecutionMode.ExecutionMode"
"Task.task""uses" o-- "Host.Vo"
"Task.task""uses" o-- "Port.Vo"
"Task.task""uses" o-- "Status.Status"
"Task.task""uses" o-- "Step.Step"
"Task.task""uses" o-- "uuid.UUID"

namespace ValueObject {
    class ExecutionMode << (S,Aquamarine) >> {
        + String() string

    }
    class Modes << (S,Aquamarine) >> {
        + String() string

    }
    class MyModes << (S,Aquamarine) >> {
        + UNARY() string

    }
    class ResultVo << (S,Aquamarine) >> {
        + Content string
        + CreatedAt time.Time
        + UpdatedAt time.Time

    }
    class StepVo << (S,Aquamarine) >> {
        + Sentence string

    }
    class TaskStatus << (S,Aquamarine) >> {
        + String() string

    }
    class ValueObject.ExecutionMode << (T, #FF7700) >>  {
    }
    class ValueObject.Modes << (T, #FF7700) >>  {
    }
    class ValueObject.TaskStatus << (T, #FF7700) >>  {
    }
}


"ValueObject.ResultVo""uses" o-- "time.Time"

"__builtin__.int" #.. "alias of""ValueObject.ExecutionMode"
"__builtin__.int" #.. "alias of""ValueObject.Modes"
"__builtin__.int" #.. "alias of""ValueObject.TaskStatus"
"__builtin__.string" #.. "alias of""CommunicationMode.Mode"
"__builtin__.string" #.. "alias of""ExecutionMode.ExecutionMode"
"__builtin__.string" #.. "alias of""Status.Status"
@enduml
